--- a/project1/src/App.css
+++ b/project1/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,32 @@
   to {
     transform: rotate(360deg);
   }
+} */
+* {
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  color: inherit;
+  list-style: none;
+  border: none;
+  border-width: 0;
+  border-style: solid;
+  border-color: transparent;
+  outline: none;
+  outline-width: 0;
+  outline-color: transparent;
+  scroll-behavior: smooth;
+}
+
+input {
+  width: fill;
+  padding: 3px;
+  margin: 3px;
+  border-style: solid;
+  border-color: #a1a1a1;
+  border-width: 1px;
 }
